# dependabot-poetry-extras

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
