[tool.poetry]
name = "dependabot-poetry-extras"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = {version = "^5.5.3", extras = ["redis"]}
httpx = "0.27.0"


[tool.poetry.group.dev.dependencies]
ipython = "9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
